[project]
name = "usbipserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beatdbyte", email = "beatdbyte@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
usbipserver = "usbipserver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
